# PocketCoffea

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pyproject_621.toml  .readthedocs.yml  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  README.md  TEST_README.md  noxfile.py  pyproject.toml  requirements.txt  runner.py  setup.cfg  setup.py  test_by_dataset_feature.py  test_by_dataset_unit.py
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
.gitlab/: setup_docker.sh
.gitlab/ci/: cvmfs-correction-updates.yml
PocketCoffea/lib/: HistManager.py  WeightsManager.py  cut_definition.py  cut_functions.py  deltaR_matching.py  fill.py  jets.py  leptons.py  objects.py  pileup.py  reconstruction.py  scale_factors.py  triggers.py
PocketCoffea/parameters/: allhistograms.py  eras.py  histograms.py  jec.py  jet_scale_factors.py  lepton_scale_factors.py  lumi.py  nureco.py  object_preselection.py  pileup.py  preselection.py  samples.py  triggers.py
PocketCoffea/utils/: Configurator.py  Dataset.py  HistoManager.py  Plot.py  PlotEfficiency.py  PlotUtils.py
PocketCoffea/workflows/: base.py  btag_sf_calibration.py  parton_matching.py  pileup_variations.py  semileptonic_triggerSF.py
config/: base.py  example.py  mem.py  semileptonic.py  test.json  test.py  testDownload.py  testUL.py  testUL_ttHbb.py  test_HLT_sel.py  test_better_fillhist.py  test_cartesian_categories.py  test_categorization.py  test_column_accumulator.py  test_jec.py  test_pileup.py  test_pileup_variations.py  test_plotting.py  test_shape_variations.py  test_skim.py  test_subsamples.py  test_weights_customization.py
config/btagSF_calibration/: config.py  config_2017.py  config_calibrated.py  config_calibrated_2017.py  config_calibrated_2018.py
config/btagSF_checks/: btag_check_oneside.py
config/datamc/: plots.py  ttHbb_ttbar_ST_WJets_datamc.py  ttHbb_ttbar_ST_datamc.py  (+2 more)
datasets/: DATA_DoubleMuon.json  DATA_DoubleMuon_2017.json  DATA_DoubleMuon_local.json  DATA_SingleEle.json  DATA_SingleEle_local.json  DATA_SingleEle_redirector.json  DATA_SingleMuon.json  DATA_SingleMuon_local.json  DATA_SingleMuon_redirector.json  DNNTraining_samples.json  DNNTraining_samples_local.json  README.md  RunIISummer20UL18.json  RunIISummer20UL18_local.json  RunIISummer20UL18_t3.json  RunIISummer20UL18_t3_local.json  TTToSemiLeptonic_sample.json  TTToSemiLeptonic_sample_local.json  background_MC_TTbb.json  background_MC_TTbb_local.json  backgrounds_MC.json  backgrounds_MC_TTbb.json  backgrounds_MC_TTbb_local.json  backgrounds_MC_TTbb_redirector.json  backgrounds_MC_local.json  backgrounds_MC_redirector.json  backgrounds_MC_ttbar.json  backgrounds_MC_ttbar_local.json  backgrounds_MC_ttbar_local_lxplus.json  backgrounds_MC_ttbar_redirector.json  baseline_samples.json  baseline_samples_local.json  datasets_definitions.json  datasets_definitions_example.json  samples_TTTo2L2Nu_TTToSemiLeptonic.json  samples_TTTo2L2Nu_TTToSemiLeptonic_debug.json  signal_ttHTobb.json  signal_ttHTobb_local.json  signal_ttHTobb_lxplus.json  signal_ttHTobb_redirector.json
docs/: analysis_example.md  analysis_example.rst  api.rst  calibrators.md  changelog.md  concepts.md  concepts.rst  conf.py  configuration.md  configuration.rst  cutflow_plots.md  datasets.md  examples.rst  index.md  index.rst  installation.md  installation.rst  law_tasks.md  parameters.md  performance.rst  plots.md  recipes.md  running.md  running.rst  statistical_analysis.md
envs/: coffea.yml
lib/: cut_definition.py  cut_functions.py  cuts.py  fill.py  objects.py  reconstruction.py  scale_factors.py  selection.py  weights.py
notebooks/: BtagSF.ipynb  Hist_migration.ipynb  JetPUId.ipynb  Jet_selection.ipynb  NF_TransferFunctions.ipynb  SumGenWeights.ipynb  SumGenWeightsAndPlotting.ipynb  TestCategorization.ipynb  TestRucio.ipynb  Tutorial.ipynb  concatenate.ipynb  electronID.ipynb  electron_etaSC.ipynb  errorbar.ipynb  hist.ipynb  jec.ipynb  jer.ipynb  jer_test.ipynb  jer_test_nanomatched.ipynb  lepton_weights.ipynb  mc_stat.ipynb  parton_matching.ipynb  parton_matching_bpartons.ipynb  parton_matching_performance_test.ipynb  parton_matching_test.ipynb  parton_matching_testnumba.ipynb  parton_matching_v2.ipynb  pileup.ipynb  pileup_variations.ipynb  save_config.ipynb  save_vectors.ipynb  scale_factors.ipynb  sf_ele_reco_variations.ipynb  sf_ele_trigger.ipynb  sf_lepton_variations.ipynb  trigger_efficiency.ipynb  trigger_efficiency_closuretest.ipynb  trigger_efficiency_systematics.ipynb  triggers.ipynb  ttbb.ipynb
parameters/: allhistograms.py  btag.py  cuts.py  jec.py  lumi.py  nureco.py  pileup.py  preselection.py  samples.py  selection.py  triggers.py
pocket_coffea/: __init__.py  __main__.py  __meta__.py  _version.py
profiling/: mem.py  parton_matching_semilep_newgenmatch_v4.prof  parton_matching_semilep_v3.prof
scripts/: README.md  accumulate_files.py  append_genweights.py  build_jec.py  compute_btagSF_calibration.py  hadd_skimmed_files.py  merge_datasets.py  runner.py  runner_old.py
tests/: test_by_dataset.py  test_calibrators.py  test_categorization.py  test_categorization_serialize.py  test_check_jobs_progress.py  test_check_jobs_recreate.py  test_check_jobs_robustness.py  test_check_jobs_slurm.py  test_correction_cache.py  test_cut_functions.py  test_cut_functions_offline.py  test_dataset_query_metadata.py  test_export_root.py  test_gen_objects.py  test_hist_weights_fixes.py  test_hlt_cut.py  test_inner_run_options.py  test_job_script.py  test_manual_jobs_splitting.py  test_merge_hadd.py  test_metadata_coercion.py  test_muon_rng.py  test_object_matching.py  test_output_split.py  test_package.py  test_parameters.py  test_plotting.py  test_recreate_jobs_blocklist.py  test_runner.py  test_skim_sumgenweights_recovery.py  test_slurm_job_script.py  test_slurm_queue.py  test_stat_datacards.py  test_triggers.py  test_update_cvmfs_corrections.py  test_weights_subsample_followup.py  utils.py
utils/: Configurator.py  Dataset.py  config_loader.py  parameters.py
workflows/: base.py  dilepton.py  mem.py  parton_matching.py
(+668 files in other folders)
