[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pocket_coffea"
description = "Configurable analysis framework based on Coffea for CMS NanoAOD events analysis"
authors = [
    {name = "Davide Valsecchi", email = "davide.valsecchi@cern.ch"},
    {name = "Matteo Marchegiani", email = "matteo.marchegiani@cern.ch"}]
license = {text = "BSD-3-Clause"}
readme = "README.md"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed"]
dynamic = ["version", "dependencies"]
requires-python = ">=3.7"

[project.urls]
Documentation = "https://pocketcoffea.readthedocs.io/"
Repository = "https://github.com/PocketCoffea/PocketCoffea"
Issues = "https://github.com/PocketCoffea/PocketCoffea/issues"
Discussion = "https://github.com/PocketCoffea/PocketCoffea/discussions"
Changelog = "https://github.com/PocketCoffea/PocketCoffea/releases"

[tool.setuptools.dynamic]
version = {attr = "pocket_coffea.__meta__.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}
dependencies = {file = ["requirements.txt"]}


[project.optional-dependencies]
dev = ["snakeviz", "memray", "flake8", "black", "pytest>=6", "pytest-cov>=3", "pre-commit", "nox"]
docs = ["sphinx>=4.0", "myst-parser>=0.13", "sphinx-book-theme>=0.1.0", "sphinx-copybutton", "sphinx-markdown-tables", "nox"]
test = ["pytest>=6", "pytest-cov>=3"]

[tool.setuptools.packages.find]
include = ["pocket_coffea*"]
exclude = ["tests/*","docs/*","datasets/*","config/*"]


[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
pocket_coffea = ["pockect_coffea/*.txt",
              "pockect_coffea/*.yaml",
              "pockect_coffea/*.json",
              "pockect_coffea/*.txt.gz"]

[project.scripts]
pocket-coffea="pocket_coffea.__main__:cli"
runner="pocket_coffea.scripts.runner:run"
make_plots="pocket_coffea.scripts.plot.make_plots:make_plots"
build_datasets="pocket_coffea.scripts.dataset.build_datasets:build_datasets"
dataset_discovery_cli="pocket_coffea.scripts.dataset:dataset_discovery_cli"
hadd_skimmed_files="pocket_coffea.scripts.hadd_skimmed_files:hadd_skimmed_files"
merge_outputs="pocket_coffea.scripts.merge_outputs:merge_outputs"

# [tool.flake8]
# extend-ignore = ["E203", "E501", "E722", "B950"]
# extend-select = ["B9"]
# per-file-ignores = {
#     "tests/*": ["T"],
#     "noxfile.py": ["T"]}