[metadata]
name = pocket_coffea
description = Configurable analysis framework based on Coffea for CMS NanoAOD events analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PocketCoffea/PocketCoffea
author = Davide Valsecchi,Matteo Marchegiani
author_email = davide.valsecchi@cern.ch,matteo.marchegiani@cern.ch
license = BSD-3-Clause
license_file = LICENSE
platforms =
    Any
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Typing :: Typed
project_urls =
    Documentation = https://PocketCoffea.readthedocs.io/
    Bug Tracker = https://github.com/PocketCoffea/PocketCoffea/issues
    Discussions = https://github.com/PocketCoffea/PocketCoffea/discussions
    Changelog = https://github.com/PocketCoffea/PocketCoffea/releases

[options]
packages = find:
install_requires =
    typing-extensions>=3.7;python_version<'3.8'
    coffea>=0.7.20
    vector
    hist
    pyaml
    requests
    dask>=2021.10.0
    dask-lxplus
    parsl
    matplotlib
    mplhep
    rich
python_requires = >=3.7
include_package_data = True
scripts =
    scripts/dataset/build_dataset.py
    scripts/runner.py


[options.extras_require]
dev =
    snakeviz
    memray
    pytest>=6
    pytest-cov>=3
    nox
docs =
    Sphinx>=4.0
    myst-parser>=0.13
    sphinx-book-theme>=0.1.0
    sphinx-copybutton
    nox
test =
    pytest>=6
    pytest-cov>=3

[flake8]
extend-ignore = E203, E501, E722, B950
extend-select = B9
per-file-ignores =
    tests/*: T
    noxfile.py: T
