[metadata]
name = pocket_coffea
version=0.8.0
description = Configurable analysis framework based on Coffea for CMS NanoAOD events analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PocketCoffea/PocketCoffea
author = Davide Valsecchi,Matteo Marchegiani
author_email = davide.valsecchi@cern.ch,matteo.marchegiani@cern.ch
license = BSD-3-Clause
license_file = LICENSE
platforms =
    Any
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Typing :: Typed
project_urls =
    Documentation = https://PocketCoffea.readthedocs.io/
    Bug Tracker = https://github.com/PocketCoffea/PocketCoffea/issues
    Discussions = https://github.com/PocketCoffea/PocketCoffea/discussions
    Changelog = https://github.com/PocketCoffea/PocketCoffea/releases

[options]
packages = find:
install_requires =
    typing-extensions>=3.7;python_version<'3.8'
    coffea==0.7.22
    numba>=0.57.0
    numpy>=1.22.0
    awkward==1.10.3
    mplhep>=0.3.48
    cloudpickle
    vector
    hist
    pyaml
    requests
    bokeh==2.4.2
    parsl
    matplotlib>=3.7
    rich
    rucio-clients
    omegaconf
    law
    click
    
python_requires = >=3.7
include_package_data = True

[options.entry_points]
console_scripts =
    pocket-coffea = pocket_coffea.__main__:cli
    runner.py = pocket_coffea.scripts.runner:run
    make_plots.py = pocket_coffea.scripts.plot.make_plots:make_plots
    build_datasets.py = pocket_coffea.scripts.dataset.build_datasets:build_datasets
    dataset_discovery_cli.py = pocket_coffea.scripts.dataset:dataset_discovery_cli
    hadd_skimmed_files.py = pocket_coffea.scripts.hadd_skimmed_files:hadd_skimmed_files
    merge_outputs.py = pocket_coffea.scripts.merge_outputs:merge_outputs
    
    
[options.extras_require]
dev =
    snakeviz
    memray
    flake8
    black
    pytest>=6
    pytest-cov>=3
    pre-commit
    nox
docs =
    sphinx>=4.0
    myst-parser>=0.13
    sphinx-book-theme>=0.1.0
    sphinx-copybutton
    sphinx-markdown-tables
    nox
test =
    pytest>=6
    pytest-cov>=3

[flake8]
extend-ignore = E203, E501, E722, B950
extend-select = B9
per-file-ignores =
    tests/*: T
    noxfile.py: T
